[func] add flashcard.typ

--- a/README
+++ b/README
@@ -4,3 +4,4 @@ Some simple typst templates for language learners.
 
 - `annotation.typ` document with annotation.
 - `bilingual.typ` interlinear bilingual document.
+- `flashcard.typ` flashcard generation from csv file
